# Metropolia_AI_international_student_advisor

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  start.bat  vercel.json
Backend/: Gemini.py  PdfUtils.py  Server.py  db.py  requirements.txt  system_prompt.txt
Backend/data/: seeded_data.json
Frontend/: package-lock.json  package.json  tsconfig.json
Frontend/app/: globals.css  page.tsx
api/: gemini.py  server.py
api/app/: globals.css
