[project]
name = "ai-survive-finland"
version = "0.1.0"
description = "Backend for the AI Survival Finland assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"flask>=3.0,<4.0",
	"flask-cors>=3.0,<4.0",
	"python-dotenv>=1.0,<2.0",
	"google-genai>=0.8,<1.0",
	"pypdf>=3.13,<4.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["api"]